--- a/home.css
+++ b/home.css
@@ -37,6 +37,7 @@ header h1 {
   left: -2px;
 }
 
+/* --- ALINHAMENTO DO PERFIL E BOTÃO --- */
 .perfil {
   display: flex;
   align-items: center;
@@ -50,6 +51,26 @@ header h1 {
   background: #ccc;
   border-radius: 50%;
 }
+
+/* --- ESTILO DO BOTÃO SAIR --- */
+#btnLogout {
+  padding: 8px 15px; 
+  flex: initial; 
+  width: auto;
+  background-color: #ff4b4b;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  font-weight: bold;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+#btnLogout:hover {
+  background-color: #cc0000;
+}
+
+/* -------------------------------- */
 
 .container {
   flex: 1;
@@ -234,21 +255,4 @@ footer a {
 
 footer a:hover {
   text-decoration: underline;
-}
-
-#btnLogout {
-  padding: 8px 15px; 
-  flex: initial; 
-  width: auto;
-  background-color: #d40202;
-  color: white;
-  border: none;
-  border-radius: 8px;
-  font-weight: bold;
-  font-size: 14px;
-  cursor: pointer;
-}
-
-#btnLogout:hover {
-  background-color: #ab0303;
 }
