--- a/resetsenha.css
+++ b/resetsenha.css
@@ -92,6 +92,7 @@ input {
     padding: 10px;
     border-radius: 15px;
     margin-bottom: 5px;
+    margin-top: 10px;
     background-color: #021D55;
     border: #ffff solid 1px;
     font-size: 15px;
@@ -113,7 +114,7 @@ button {
     border: none;
     transition: all 0.3s ease;
     box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
-    width: 20%;
+    width: 50%;
 }
 
 button:hover {
